--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+               <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -786,7 +786,7 @@
                     <div class="ca-app-pub-3536672082666808/2118469559">
                         <!-- Google AdSense Ad Unit -->
                         <!-- Replace with your AdSense code -->
-                        AdSense Ad Unit
+                        ca-app-pub-3536672082666808/2118469559
                     </div>
                 </div>
             </div>
