--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
         </div>
 
         <!-- Ad Section -->
-        <div class="ad-section">
+        <div class="ca-app-pub-3536672082666808/2118469559">
             <div class="container">
                 <div class="ca-app-pub-3536672082666808/2118469559">
                     <h3>Advertisement</h3>
